--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,4 +12,8 @@ pool:
 steps:
 - script: |
     make
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: 'which valgrind'
   displayName: 'make'
