--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,20 @@
 version: 2.0
+
+jobs:
+  source-code-build:
+
+    machine:
+      image: ubuntu-1604:201903-01
+
+    steps:
+      - checkout
+      - run:
+        name: Build Source Code
+        command: make
+
+
+workflow:
+  version: 2
+  Regression:
+    jobs:
+      source-code-build:
