--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.0
+
+
 jobs:
+
   source-code-build:
     machine:
       image: ubuntu-1604:201903-01
@@ -7,9 +10,13 @@ jobs:
       - checkout
       - run:
           name: Build Source Code
-          #command: make
+          command: |
+            echo "Build Start"
+
+
 workflows:
   version: 2
+
   Regression:
     jobs:
       - source-code-build
