--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -13,3 +13,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: configure
       run: echo "Running on PR close actions."
+    - name: Pushing
+      run: |
+        echo "new file" > newfile
+        git add .
+        git commit -m "add new file"
+        git push
