--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -11,13 +11,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: configure
-      run: echo "Running on PR close actions."
-    - name: Pushing
+    - name: Create PR
       run: |
-        echo "new file" > newfile
-        git config --global user.name 'Alok'
-        git config --global user.email 'aloknigam247@github.com'
-        git add .
-        git commit -m "add new file"
-        git push
+        echo "create PR"
+        gh pr create -B master -b "test PR" -f -t "Test PR"
