--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -12,5 +12,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Create PR
       run: |
+        sudo apt install git && sudo dpkg -i gh_*_linux_amd64.deb
         echo "create PR"
         gh pr create -B master -b "test PR" -f -t "Test PR"
